After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776384 - nm-applet not show wwan options on menu after logout/in Edit
nm-applet not show wwan options on menu after logout/in Edit
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: nm-applet
1.2.x
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-12-22 10:24 UTC by alextu
Modified: 2017-01-09 07:04 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description alextu 2016-12-22 10:24:35 UTC
With DW5811e(EM7455), mobile data connection not show on nm indicator after logout -> login.

packages which be used:
network-manager: network-manager_1.2.2-0ubuntu0.16.04.3_amd64
nm-applet: network-manager-gnome_1.2.0-0ubuntu0.16.04.4_amd64

Steps to reproduce:
1. boot device with 4G sim card + DW5811e(EM7455) wwan card
2. check nm-applet indicator then "Mobile Braodband" could be found in menu in normal cases.
3. logout then login
4. check nm-applet indicator then "Mobile Braodband" not shows in menu anymore.
5. but still could connect to wwan by nmcli, so looks device and networkmanager work fine.

investigation:
* In nm-applet, it caused by device-added signal comes before mm_new_ready() which is the call back of mm_manager_new(). And that asynchronous way was added by 408b88cc (Dan Williams 2014-05-01:
http://paste.ubuntu.com/23639247/
* revert 408b88cc fixed this issue.

also created a issue there:
https://bugs.launchpad.net/ubuntu/+source/network-manager-applet/+bug/1651019
Comment 1 alextu 2016-12-27 06:37:08 UTC
btw, my distribution is Ubuntu Xenial 16.04.1.
Comment 2 Beniamino Galvani 2016-12-30 09:51:09 UTC
Proposed fix in branch bg/mm-device-race-bgo776384.
Comment 3 Thomas Haller 2016-12-30 14:09:31 UTC
lgtm
Comment 5 alextu 2017-01-06 07:11:38 UTC
awesome! thanks, btw, could that patch be merged to nm-applet 1.2 as well? so that, we can also enjoy the fix by the distributions which stick on nm-applet 1.2 :)
Comment 6 Beniamino Galvani 2017-01-06 09:28:54 UTC
(In reply to alextu from comment #5)
> awesome! thanks, btw, could that patch be merged to nm-applet 1.2 as well?
> so that, we can also enjoy the fix by the distributions which stick on
> nm-applet 1.2 :)

Sure:

https://git.gnome.org/browse/network-manager-applet/commit/?h=nma-1-2&id=0eb16c742628a01668d5bded3cd9c6b1f45a3808
Comment 7 alextu 2017-01-09 07:04:33 UTC
thanks a lot!! it works perfectly now :)