applet: re-add broadband devices when MM becomes available

Broadband devices stay uninitialized if they are added before the
ModemManager is running. Call again the device_added method after MM
becomes available.

https://bugzilla.gnome.org/show_bug.cgi?id=776384